--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
   </parent>
 
   <groupId>io.fabric8.elasticsearch</groupId>
-  <artifactId>openshift-searchguard-sync</artifactId>
+  <artifactId>openshift-elasticsearch-plugin</artifactId>
   <version>0.1-SNAPSHOT</version>
-  <name>Fabric8 :: Elasticsearch:: Openshift -&gt; Search Guard Sync</name>
+  <name>OpenShift ElasticSearch Plugin</name>
 
   <url>http://fabric8.io/</url>
   <inceptionYear>2015</inceptionYear>
@@ -57,15 +57,15 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git@github.com:fabric8io/openshift-searchguard-sync.git</connection>
-    <developerConnection>scm:git:git@github.com:fabric8io/openshift-searchguard-sync.git</developerConnection>
-    <url>http://github.com/fabric8io/openshift-searchguard-sync/</url>
+    <connection>scm:git:git@github.com:fabric8io/openshift-elasticsearch-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:fabric8io/openshift-elasticsearch-plugin.git</developerConnection>
+    <url>http://github.com/fabric8io/openshift-elasticsearch-plugin/</url>
     <tag>${project.version}</tag>
   </scm>
 
   <issueManagement>
     <system>GitHub</system>
-    <url>https://github.com/fabric8io/openshift-searchguard-sync/issues/</url>
+    <url>https://github.com/fabric8io/openshift-elasticsearch-plugin/issues/</url>
   </issueManagement>
 
   <properties>
