--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
       <version>2.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.9</version>
+    </dependency>
   </dependencies>
 
   <build>
