--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,16 @@
 
     <elasticsearch.version>1.5.2</elasticsearch.version>
     <kubernetes-client.version>1.3.40</kubernetes-client.version>
+    <searchguard.version>0.5</searchguard.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>com.floragunn</groupId>
+      <artifactId>search-guard</artifactId>
+      <version>${searchguard.version}</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
@@ -118,6 +125,12 @@
       <artifactId>commons-io</artifactId>
       <version>2.1</version>
       <scope>test</scope>
+	</dependency>
+    <dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>fluent-hc</artifactId>
+		<version>4.5.1</version>
+      	<scope>test</scope>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
@@ -153,6 +166,9 @@
         <inherited>true</inherited>
         <version>2.18.1</version>
         <configuration>
+          <excludes>
+            <exclude>**/*IntegrationTest.java</exclude>
+          </excludes>
           <environmentVariables>
             <ENV_VAR_EXISTS>value</ENV_VAR_EXISTS>
             <ENV_VAR_EXISTS_BOOLEAN>true</ENV_VAR_EXISTS_BOOLEAN>
