--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
   <groupId>io.fabric8.elasticsearch</groupId>
   <artifactId>openshift-elasticsearch-plugin</artifactId>
-  <version>0.15-SNAPSHOT</version>
+  <version>2.3.3.0-SNAPSHOT</version>
   <name>OpenShift ElasticSearch Plugin</name>
 
   <url>http://fabric8.io/</url>
@@ -71,27 +71,54 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
 
-    <elasticsearch.version>1.5.2</elasticsearch.version>
-    <kubernetes-client.version>1.3.68</kubernetes-client.version>
-    <searchguard.version>0.5</searchguard.version>
+    <elasticsearch.plugin.name>openshift-elasticsearch</elasticsearch.plugin.name>
+    <elasticsearch.version>2.3.3</elasticsearch.version>
+    <kubernetes-client.version>1.3.99</kubernetes-client.version>
+    <searchguard.version>2.3.3.3</searchguard.version>
+    <searchguard-ssl.version>2.3.3.13</searchguard-ssl.version>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>com.floragunn</groupId>
-      <artifactId>search-guard</artifactId>
-      <version>${searchguard.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
       <groupId>org.elasticsearch</groupId>
       <artifactId>elasticsearch</artifactId>
       <version>${elasticsearch.version}</version>
+      <scope>provided</scope>
+      <exclusions>
+      	<exclusion>
+      		<artifactId>jackson-core</artifactId>
+      		<groupId>com.fasterxml.jackson.core</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jackson-dataformat-yaml</artifactId>
+      		<groupId>com.fasterxml.jackson.dataformat</groupId>
+      	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>openshift-client</artifactId>
       <version>${kubernetes-client.version}</version>
+      <exclusions>
+      	<exclusion>
+      		<artifactId>jackson-core</artifactId>
+      		<groupId>com.fasterxml.jackson.core</groupId>
+      	</exclusion>
+      	<exclusion>
+      		<artifactId>jackson-dataformat-yaml</artifactId>
+      		<groupId>com.fasterxml.jackson.dataformat</groupId>
+      	</exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.floragunn</groupId>
+      <artifactId>search-guard-2</artifactId>
+      <version>${searchguard.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.floragunn</groupId>
+      <artifactId>search-guard-ssl</artifactId>
+      <version>${searchguard-ssl.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -132,6 +159,12 @@
       <artifactId>commons-codec</artifactId>
       <version>1.9</version>
     </dependency>
+    <dependency>
+    <groupId>org.yaml</groupId>
+    <artifactId>snakeyaml</artifactId>
+    <version>1.16</version>
+    <scope>test</scope>
+  </dependency>
   </dependencies>
 
   <build>
