support the common data model
This adds 3 new elasticsearch.yml openshift.config section parameters:

* `use_common_data_model` - boolean - default `false` - if true, tell the
  plugin that you want to use the common data model
* `project_index_prefix` - string - default `""` - set this to the string value
  that project/namespace indices use as their prefix - for example, with the
  common data model, if the namespace is `test`, the index name will be
  `project.test.$uuid.YYYY.MM.DD`.  In this case, use `"project"` as the
  prefix - omit the trailing `.`.
* `time_field_name` - string - default `"time"` - the common data model uses
  `"@timestamp"` as the name of the time field

If the common data model is used, the common data model index-pattern values
will be loaded to match the common data model index naming, model, and field
naming conventions.

The index-mapping values are from doing a search of the .kibana index after
loading Kibana and loading data from common data model indices.

--- a/samples/elasticsearch.yml
+++ b/samples/elasticsearch.yml
@@ -392,6 +392,13 @@ index.number_of_replicas: 0
 #monitor.jvm.gc.old.info: 5s
 #monitor.jvm.gc.old.debug: 2s
 
+################################## Common Data Model########################
+# in order to use the common data model, use these settings:
+#openshift.config:
+#  use_common_data_model: true
+#  project_index_prefix: "project"
+#  time_field_name: "@timestamp"
+
 ################################## Security ################################
 
 # Uncomment if you want to enable JSONP as a valid return transport on the
