Add Elasticsearch integration tests.

--- a/src/it/resources/sgconfig/sg_roles_mapping.yml
+++ b/src/it/resources/sgconfig/sg_roles_mapping.yml
@@ -1,4 +1,3 @@
-#!/bin/bash
 #
 # Copyright (C) 2015 Red Hat, Inc.
 #
@@ -15,16 +14,19 @@
 # limitations under the License.
 #
 
-if [ -n "${DEBUG:-}" ]; then
-  set -x
-fi
+sg_role_kibana:
+  users:
+    - 'kibana'
 
-DIR="${DIR:-$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )}"
+sg_role_fluentd:
+  users:
+    - 'fluentd'
 
-BIN_PATH="java"
-CONFIG_DIR="${CONFIG_DIR:-$DIR/../../config}"
-SCRIPT_CP="${SCRIPT_CP:-$DIR/*:$DIR/../../lib/*}"
+sg_role_curator:
+  users:
+    - 'curator'
 
-cd "$CONFIG_DIR"
-echo $(pwd)
-"$BIN_PATH" $JAVA_OPTS -cp "${SCRIPT_CP}" com.floragunn.searchguard.tools.SearchGuardAdmin "$@"
+sg_role_admin:
+  users:
+    - 'admin'
+    - '_sg_internal'
