--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,8 @@
     <kubernetes-client.version>1.3.99</kubernetes-client.version>
     <searchguard.version>2.4.1.8</searchguard.version>
     <searchguard-ssl.version>2.4.1.16</searchguard-ssl.version>
+    <!-- used by vendor builds to use vendor version of searchguard plugins -->
+    <version.suffix></version.suffix>
   </properties>
 
   <dependencies>
@@ -113,12 +115,12 @@
     <dependency>
       <groupId>com.floragunn</groupId>
       <artifactId>search-guard-2</artifactId>
-      <version>${searchguard.version}</version>
+      <version>${searchguard.version}${version.suffix}</version>
     </dependency>
     <dependency>
       <groupId>com.floragunn</groupId>
       <artifactId>search-guard-ssl</artifactId>
-      <version>${searchguard-ssl.version}</version>
+      <version>${searchguard-ssl.version}${version.suffix}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
