--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,37 @@
           </execution>
         </executions>
       </plugin>
+       <plugin>
+		   <groupId>org.apache.maven.plugins</groupId>
+		   <artifactId>maven-checkstyle-plugin</artifactId>
+		   <version>2.16</version>
+           <dependencies>
+            <dependency>
+              <groupId>com.puppycrawl.tools</groupId>
+              <artifactId>checkstyle</artifactId>
+              <version>6.19</version>
+            </dependency>
+          </dependencies>
+		   <executions>
+		     <execution>
+		       <id>checkstyle</id>
+		       <phase>validate</phase>
+		       <configuration>
+		         <configLocation>checkstyle.xml</configLocation>
+		         <encoding>UTF-8</encoding>
+		         <headerLocation>license.txt</headerLocation>
+		         <consoleOutput>true</consoleOutput>
+		         <failsOnError>true</failsOnError>
+		         <linkXRef>false</linkXRef>
+		         <includeTestSourceDirectory>true</includeTestSourceDirectory>
+		          <violationSeverity>warning</violationSeverity>
+		       </configuration>
+		       <goals>
+		         <goal>check</goal>
+		       </goals>
+		     </execution>
+		   </executions>
+		 </plugin>
     </plugins>
   </build>
 
