bug 1420217. Squash stack on start and refactor read/writes

--- a/src/main/assemblies/plugin.xml
+++ b/src/main/assemblies/plugin.xml
@@ -33,6 +33,11 @@
       <outputDirectory></outputDirectory>
       <filtered>true</filtered>
     </file>
+    <file>
+      <source>${basedir}/tools/sgadmin.sh</source>
+      <outputDirectory></outputDirectory>
+      <filtered>true</filtered>
+    </file>
   </files>
   <dependencySets>
     <dependencySet>
