--- a/pom.xml
+++ b/pom.xml
@@ -86,16 +86,6 @@
       <artifactId>elasticsearch</artifactId>
       <version>${elasticsearch.version}</version>
       <scope>provided</scope>
-      <exclusions>
-      	<exclusion>
-      		<artifactId>jackson-core</artifactId>
-      		<groupId>com.fasterxml.jackson.core</groupId>
-      	</exclusion>
-      	<exclusion>
-      		<artifactId>jackson-dataformat-yaml</artifactId>
-      		<groupId>com.fasterxml.jackson.dataformat</groupId>
-      	</exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.fabric8</groupId>
@@ -226,6 +216,7 @@
           <excludes>
             <exclude>.editorconfig</exclude>
             <exclude>license.txt</exclude>
+            <exclude>src/test/**/*.yml</exclude>
           </excludes>
         </configuration>
       </plugin>
