migrate plugin to be compatible with ES 5.5.2
fix #104. skip seeding if default kibana index does not exist

bug 1537857. Remove user header for requests without tokens and

--- a/src/test/resources/io/fabric8/elasticsearch/plugin/passwords.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/passwords.yml
@@ -14,5 +14,6 @@
 # limitations under the License.
 #
 
-plugin=io.fabric8.elasticsearch.plugin.OpenShiftElasticSearchPlugin
-version=${project.version}
+# username with a b64 encoded password of 'bar'
+foo:
+  passwd: YmFyCg==
