--- a/src/test/resources/io/fabric8/elasticsearch/plugin/searchguard_roles_acl.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/searchguard_roles_acl.yml
@@ -50,6 +50,9 @@ sg_role_admin:
   cluster:
     - CLUSTER_ALL
 
+sg_role_prometheus:
+  cluster: [METRICS]
+
 sg_project_operations:
   indices:
     '?operations?*':
