added the ability to share dashboards between users
added kibana index mode info

changed from SHARED to SHARED_NON_OPS
ops index changed to .kibana
non ops index is now .kibana_non_ops
added and improved tests

--- a/src/test/resources/io/fabric8/elasticsearch/plugin/user_role_with_shared_kibana_index_with_unique.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/user_role_with_shared_kibana_index_with_unique.yml
@@ -11,6 +11,7 @@ gen_project_operations:
     ?operations?:
       '*': [INDEX_OPERATIONS]
 gen_user_user2_bar_email_com:
+  cluster: [USER_CLUSTER_OPERATIONS]
   indices:
     .all_user2_bar_email_com:
       '*': [INDEX_PROJECT]
