--- a/src/test/resources/sgconfig/config.yml
+++ b/src/test/resources/sgconfig/config.yml
@@ -1,4 +1,3 @@
-#!/bin/bash
 #
 # Copyright (C) 2015 Red Hat, Inc.
 #
@@ -15,15 +14,22 @@
 # limitations under the License.
 #
 
-if [ -n "${DEBUG:-}" ]; then
-  set -x
-fi
-DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
-
-BIN_PATH="java"
-ES_CONF="${ES_CONF:-$DIR/../../config}"
-SCRIPT_CP="${SCRIPT_CP:-$DIR/*:$DIR/../../lib/*}"
-
-pushd "${ES_CONF}"
-  "$BIN_PATH" $JAVA_OPTS -Dsg.display_lic_none=true -cp "${SCRIPT_CP}" com.floragunn.searchguard.tools.SearchGuardAdmin "$@"
-popd
+searchguard:
+  dynamic:
+    http:
+      xff:
+        enabled: true
+        remoteIpHeader: 'x-forwarded-for'
+        trustedProxies: '.*'
+        internalProxies: '.*'
+    authc:
+      authentication_domain_proxy:
+        enabled: true
+        order: 0
+        http_authenticator:
+          challenge: false
+          type: proxy
+          config:
+            user_header: 'x-proxy-remote-user'
+        authentication_backend:
+          type: noop
