--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
       <version>${searchguard-ssl.version}${version.suffix}</version>
     </dependency>
     <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-tcnative</artifactId>
+        <version>1.1.33.Fork17</version>
+        <classifier>linux-x86_64-fedora</classifier>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.7</version>
