--- a/src/test/resources/io/fabric8/elasticsearch/plugin/user_role_with_shared_kibana_index_with_unique.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/user_role_with_shared_kibana_index_with_unique.yml
@@ -12,6 +12,7 @@ gen_project_operations:
       '*': [INDEX_OPERATIONS]
 gen_user_4c54bf89fe913f39fc22d76309f80cdc6192928f:
   cluster: [USER_CLUSTER_OPERATIONS]
+  expires: 15
   indices:
     ?kibana?4c54bf89fe913f39fc22d76309f80cdc6192928f:
       '*': [INDEX_KIBANA]
@@ -21,6 +22,7 @@ gen_user_4c54bf89fe913f39fc22d76309f80cdc6192928f:
       '*': [INDEX_PROJECT]
 gen_user_994a33f6a157ba4a286395f81a4333db1e6cefb6:
   cluster: [USER_CLUSTER_OPERATIONS]
+  expires: 15
   indices:
     ?kibana?994a33f6a157ba4a286395f81a4333db1e6cefb6:
       '*': [INDEX_KIBANA]
