--- a/src/test/resources/io/fabric8/elasticsearch/plugin/user_rolesmapping_shared_ops_kibana_index_with_unique.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/user_rolesmapping_shared_ops_kibana_index_with_unique.yml
@@ -3,6 +3,8 @@ gen_ocp_kibana_shared:
 gen_project_operations:
   users: [user1, user3]
 gen_user_4c54bf89fe913f39fc22d76309f80cdc6192928f:
+  expires: 15
   users: ['CN=jdoe,OU=DL IT,OU=User Accounts,DC=example,DC=com']
 gen_user_994a33f6a157ba4a286395f81a4333db1e6cefb6:
+  expires: 15
   users: [user2.bar@email.com]
