--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <groupId>io.fabric8.elasticsearch</groupId>
     <artifactId>openshift-elasticsearch-plugin</artifactId>
-    <version>5.5.2.1-SNAPSHOT</version>
+    <version>5.5.2.1</version>
     <name>OpenShift ElasticSearch Plugin</name>
 
     <url>http://fabric8.io/</url>
