--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
             <version>${searchguard-ssl.version}</version>
         </dependency>
         <dependency>
+          <groupId>io.netty</groupId>
+          <artifactId>netty-tcnative</artifactId>
+          <version>2.0.5.Final</version>
+          <classifier>linux-x86_64-fedora</classifier>
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
