--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-
-    Copyright (C) 2015 Red Hat, Inc.
-
-    Licensed under the Apache License, Version 2.0 (the "License");
-    you may not use this file except in compliance with the License.
-    You may obtain a copy of the License at
-
-            http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing, software
-    distributed under the License is distributed on an "AS IS" BASIS,
-    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    See the License for the specific language governing permissions and
-    limitations under the License.
-
--->
+<!-- Copyright (C) 2015 Red Hat, Inc. Licensed under the Apache License, 
+    Version 2.0 (the "License"); you may not use this file except in compliance 
+    with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+    Unless required by applicable law or agreed to in writing, software distributed 
+    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+    OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+    the specific language governing permissions and limitations under the License. -->
 <!-- Copyright (C) 2015 Red Hat, Inc. Licensed under the Apache License, 
     Version 2.0 (the "License"); you may not use this file except in compliance 
     with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
@@ -34,8 +24,8 @@
 
     <groupId>io.fabric8.elasticsearch</groupId>
     <artifactId>openshift-elasticsearch-plugin</artifactId>
-    <version>5.5.2.2-SNAPSHOT</version>
-    <name>OpenShift ElasticSearch Plugin</name>
+    <version>5.6.9.0-SNAPSHOT</version>
+    <name>Openshift Elasticsearch Plugin</name>
 
     <url>http://fabric8.io/</url>
     <inceptionYear>2015</inceptionYear>
@@ -80,10 +70,10 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <elasticsearch.plugin.name>openshift-elasticsearch</elasticsearch.plugin.name>
-        <elasticsearch.version>5.5.2</elasticsearch.version>
+        <elasticsearch.version>5.6.9</elasticsearch.version>
         <kubernetes-client.version>1.3.99</kubernetes-client.version>
-        <searchguard.version>5.5.2-15-rh</searchguard.version>
-        <searchguard-ssl.version>5.5.2-23</searchguard-ssl.version>
+        <searchguard.version>5.6.9-19-rh</searchguard.version>
+        <searchguard-ssl.version>5.6.9-23</searchguard-ssl.version>
         <!-- used by vendor builds to use vendor version of searchguard plugins -->
         <version.suffix />
     </properties>
