--- a/src/test/resources/io/fabric8/elasticsearch/plugin/user_role_with_shared_kibana_index_with_unique.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/user_role_with_shared_kibana_index_with_unique.yml
@@ -1,3 +1,17 @@
+gen_kibana_4c54bf89fe913f39fc22d76309f80cdc6192928f:
+  cluster: [USER_KIBANA_CLUSTER_OPERATIONS]
+  indices:
+    '*':
+      '*': [USER_ALL_INDEX_OPS]
+    ?kibana?4c54bf89fe913f39fc22d76309f80cdc6192928f:
+      '*': [INDEX_KIBANA]
+gen_kibana_994a33f6a157ba4a286395f81a4333db1e6cefb6:
+  cluster: [USER_KIBANA_CLUSTER_OPERATIONS]
+  indices:
+    '*':
+      '*': [USER_ALL_INDEX_OPS]
+    ?kibana?994a33f6a157ba4a286395f81a4333db1e6cefb6:
+      '*': [INDEX_KIBANA]
 gen_ocp_kibana_shared:
   cluster: [CLUSTER_MONITOR_KIBANA]
   indices:
