fix 1596099. Update permissions with IndexRequest instead of UpdateRequest to get overwrite behavior

--- a/src/test/resources/io/fabric8/elasticsearch/plugin/searchguard_roles_acl.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/searchguard_roles_acl.yml
@@ -13,7 +13,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
+sg_unrecognized_child:
+  foo: [bar]
+  
 sg_role_kibana:
   cluster:
       - cluster:monitor/nodes/info
