--- a/pom.xml
+++ b/pom.xml
@@ -16,21 +16,9 @@
     limitations under the License.
 
 -->
-<!-- Copyright (C) 2015 Red Hat, Inc. Licensed under the Apache License, 
-    Version 2.0 (the "License"); you may not use this file except in compliance 
-    with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
-    Unless required by applicable law or agreed to in writing, software distributed 
-    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
-    OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
-    the specific language governing permissions and limitations under the License. -->
-<!-- Copyright (C) 2015 Red Hat, Inc. Licensed under the Apache License, 
-    Version 2.0 (the "License"); you may not use this file except in compliance 
-    with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
-    Unless required by applicable law or agreed to in writing, software distributed 
-    under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
-    OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
-    the specific language governing permissions and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.sonatype.oss</groupId>
@@ -87,7 +75,7 @@
 
         <elasticsearch.plugin.name>openshift-elasticsearch</elasticsearch.plugin.name>
         <elasticsearch.version>5.6.10</elasticsearch.version>
-        <kubernetes-client.version>1.3.99</kubernetes-client.version>
+        <kubernetes-client.version>4.0.3</kubernetes-client.version>
         <searchguard.version>5.6.10-19.2-rh</searchguard.version>
         <searchguard-ssl.version>5.6.10-23</searchguard-ssl.version>
         <!-- used by vendor builds to use vendor version of searchguard plugins -->
@@ -103,7 +91,7 @@
         </dependency>
         <dependency>
             <groupId>io.fabric8</groupId>
-            <artifactId>openshift-client</artifactId>
+            <artifactId>kubernetes-openshift-uberjar</artifactId>
             <version>${kubernetes-client.version}</version>
             <exclusions>
                 <exclusion>
@@ -115,6 +103,11 @@
                     <groupId>com.fasterxml.jackson.dataformat</groupId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.floragunn</groupId>
