--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         <elasticsearch.plugin.name>openshift-elasticsearch</elasticsearch.plugin.name>
         <elasticsearch.version>5.6.10</elasticsearch.version>
         <kubernetes-client.version>4.0.3</kubernetes-client.version>
-        <searchguard.version>5.6.10-19.2-rh</searchguard.version>
+        <searchguard.version>5.6.10-19.2</searchguard.version>
         <searchguard-ssl.version>5.6.10-23</searchguard-ssl.version>
         <!-- used by vendor builds to use vendor version of searchguard plugins -->
         <version.suffix />
@@ -285,6 +285,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--  KEEP FOR FUTURE INCASE WE NEED TO VENDOR AGAIN
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
@@ -307,6 +308,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
         </plugins>
     </build>
 
