--- a/src/test/resources/io/fabric8/elasticsearch/plugin/user_strategy_roles_shared_non_ops_kibana_mode.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/user_strategy_roles_shared_non_ops_kibana_mode.yml
@@ -1,39 +1,25 @@
-gen_kibana_4c54bf89fe913f39fc22d76309f80cdc6192928f:
-  cluster: [USER_KIBANA_CLUSTER_OPERATIONS]
-  expires: '15'
-  indices:
-    '*':
-      '*': [USER_ALL_INDEX_OPS]
-    ?kibana?4c54bf89fe913f39fc22d76309f80cdc6192928f:
-      '*': [INDEX_KIBANA]
-gen_kibana_994a33f6a157ba4a286395f81a4333db1e6cefb6:
-  cluster: [USER_KIBANA_CLUSTER_OPERATIONS]
-  expires: '15'
-  indices:
-    '*':
-      '*': [USER_ALL_INDEX_OPS]
-    ?kibana?994a33f6a157ba4a286395f81a4333db1e6cefb6:
-      '*': [INDEX_KIBANA]
 gen_ocp_kibana_shared:
   cluster: [CLUSTER_MONITOR_KIBANA]
   expires: '15'
   indices:
-    '*':
-      '*': [INDEX_ANY_KIBANA]
+    ?kibana:
+      '*': [INDEX_KIBANA]
+gen_ocp_kibana_shared_non_ops:
+  cluster: [CLUSTER_MONITOR_KIBANA]
+  expires: '15'
+  indices:
+    ?kibana_non_ops:
+      '*': [INDEX_KIBANA]
 gen_project_operations:
   cluster: [CLUSTER_OPERATIONS]
   expires: '15'
   indices:
-    '*?*?*':
+    '*':
       '*': [INDEX_ANY_OPERATIONS]
-    ?operations?:
-      '*': [INDEX_OPERATIONS]
 gen_user_4c54bf89fe913f39fc22d76309f80cdc6192928f:
   cluster: [USER_CLUSTER_OPERATIONS]
   expires: '15'
   indices:
-    ?kibana?4c54bf89fe913f39fc22d76309f80cdc6192928f:
-      '*': [INDEX_KIBANA]
     ?project?distinguishedproj?*:
       '*': [INDEX_PROJECT]
     distinguishedproj?*:
@@ -42,8 +28,6 @@ gen_user_994a33f6a157ba4a286395f81a4333db1e6cefb6:
   cluster: [USER_CLUSTER_OPERATIONS]
   expires: '15'
   indices:
-    ?kibana?994a33f6a157ba4a286395f81a4333db1e6cefb6:
-      '*': [INDEX_KIBANA]
     ?project?foo?bar?*:
       '*': [INDEX_PROJECT]
     ?project?xyz?*:
