--- a/src/test/resources/io/fabric8/elasticsearch/plugin/project_strategy_roles_shared_ops_kibana_mode.yml
+++ b/src/test/resources/io/fabric8/elasticsearch/plugin/project_strategy_roles_shared_ops_kibana_mode.yml
@@ -1,15 +1,20 @@
 gen_kibana_a1881c06eec96db9901c7bbfe41c42a3f08e9cb4:
   expires: '10'
   indices:
-    ?kibana_non_ops:
+    ?kibana?a1881c06eec96db9901c7bbfe41c42a3f08e9cb4:
       '*': [INDEX_KIBANA]
 gen_ocp_kibana_shared:
   cluster: [CLUSTER_MONITOR_KIBANA]
   indices:
-    '*':
-      '*': [INDEX_ANY_KIBANA]
     ?kibana:
       '*': [INDEX_KIBANA]
+gen_project_foo_bar:
+  expires: '10'
+  indices:
+    ?project?foo?bar?*:
+      '*': [INDEX_PROJECT]
+    foo?bar?*:
+      '*': [INDEX_PROJECT]
 gen_project_operations:
   cluster: [CLUSTER_OPERATIONS]
   indices:
