--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 
         <elasticsearch.plugin.name>openshift-elasticsearch</elasticsearch.plugin.name>
         <elasticsearch.version>5.6.16</elasticsearch.version>
-        <kubernetes-client.version>4.4.2</kubernetes-client.version>
+        <kubernetes-client.version>4.6.3</kubernetes-client.version>
         <searchguard.version>5.6.16-19.3</searchguard.version>
         <searchguard-ssl.version>5.6.16-23</searchguard-ssl.version>
         <!-- used by vendor builds to use vendor version of searchguard plugins -->
@@ -92,6 +92,14 @@
             <artifactId>kubernetes-openshift-uberjar</artifactId>
             <version>${kubernetes-client.version}</version>
             <exclusions>
+                <exclusion>
+                    <artifactId>jackson-annotations</artifactId>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jackson-databind</artifactId>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                </exclusion>
                 <exclusion>
                     <artifactId>jackson-core</artifactId>
                     <groupId>com.fasterxml.jackson.core</groupId>
